# sol-2-terra-tap

./: CONTRIBUTING.md  Cargo.toml  README.md
clients/: README.md
clients/lib/: README.md
clients/lib/SimpleConnect/: SimpleConnect.cpp
clients/lib/SimpleDebug/: SimpleDebug.h
clients/lib/SimpleSleep/: SimpleSleep.h
clients/watering/: watering.ino
e2e/: Cargo.toml  README.md
e2e/src/: main.rs
files/diagrams/: ablauf.drawio  systemarchitektur.drawio
files/raw/: Antrag.docx  Dokumentation.docx  Glossar.xlsx  Planung.xlsx
hub/: Cargo.toml  README.md
hub/src/: main.rs  mqttc.rs  settings.rs  state.rs
hub/src/core/: macros.rs  manager.rs  mod.rs  serde.rs
hub/src/core/traits/: config.rs  mod.rs  module.rs
hub/src/modules/: mod.rs  prelude.rs  sensor.rs  watering.rs
lib/: install.ps1  uninstall.ps1
lib/SimpleConnect/: SimpleConnect.h
lib/SimpleSleep/: SimpleSleep.cpp
mqttd/: Cargo.toml  README.md  rumqttd.toml
mqttd/src/: main.rs
sensor/: sensor.ino
watering/: watering.ino
