[package]
name = "hub"
version = "0.1.0"
edition = "2021"

[dependencies]
# JSON support
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
# logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# async
tokio = { workspace = true }
# mqtt client
rumqttc = "0.24.0"
# additional dependencies
once_cell = "1.19.0"
chrono = "0.4.38"
async-trait = "0.1.80"
